﻿# Changelog
Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

## [0.14...]
### 2019-12-16
	Changed: Make internal code report power plan/behaviour changes more explicitly.
	Changed: Session start high performance _reset_ should be skipped if anything else has changed the power behaviour.
### 2019-12-08
	Fixed: ArgumentOutOfRangeException for process select dialog when nothing was selected.
### 2019-12-07
	Fixed: NotImplementedException for a feature not being intended to be implemented.
	Fixed: NullReferenceException when attempting to create a new watchlist rule.
### 2019-12-03
	Changed: Don't write crash log on some soft failures.
### 2019-12-02
	Added: Dialog to attempt restart if there's an initialization failure with relevant errors.
	Changed: Some error handling should now produce much more useful messages.
### 2019-11-29
	Fixed: Null reference exception in hang detector.
### 2019-11-23
	Fixed: Processor count is fetched via P/Invoke to avoid a rare COM exception. (reported by Chairkicker Nick)
	Fixed: Null reference error in exit cleanup. (reported by Chairkicker Nick)
	Fixed: Double reporting of an error in exit cleanup. (reported by Chairkicker Nick)
### 2019-11-11
	Fixed: Assertation error in health monitor from poorly handled lock.
### 2019-10-15
	Changed: Log some self-maintenance errors properly.
	Fixed: Boot time high performance mode was doing math wrong and crashing. (reported by Chairkicker Nick)
### 2019-10-13
	Changed: Log initialization failures better.
### 2019-10-12
	Fixed: NullReferenceException in the crash handler (reported by Chairkicker Nick)
	Fixed: ArgumentOutOfRangeException in opening component configuration with unexpected WMI poll delay. (reported by Chairkicker Nick)
### 2019-10-10
	Added: Session start and session end power boosting. Disabled by default. (requested by Chairkicker Nick)
### 2019-10-09
	Fixed: 2 potential errors when closing down.
### 2019-09-25