@@ -3,6 +3,8 @@ Comprehensive changes can be found in Git change history:
 	https://github.com/mkahvi/taskmaster/commits/master
 
 ## [0.14...]
+### 2019-12-17
+	Changed: Stop logging voluntary crashes.
 ### 2019-12-16
 	Changed: Make internal code report power plan/behaviour changes more explicitly.
 	Changed: Session start high performance _reset_ should be skipped if anything else has changed the power behaviour.
